WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270156
Non-unified build fixes, late February 2024 edition
https://bugs.webkit.org/show_bug.cgi?id=270156
Summary
Non-unified build fixes, late February 2024 edition
Adrian Perez
Reported
2024-02-27 03:06:46 PST
🥸️
Attachments
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2024-02-27 06:02:38 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25168
EWS
Comment 2
2024-02-27 06:46:41 PST
Committed
275381@main
(3f4bd57a7ba1): <
https://commits.webkit.org/275381@main
> Reviewed commits have been landed. Closing PR #25168 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-02-27 06:47:14 PST
<
rdar://problem/123688950
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug