Cherry-pick 275381@main (3f4bd57a7ba1). https://bugs.webkit.org/show_bug.cgi?id=270156

Non-unified build fixes, late February 2024 edition
    https://bugs.webkit.org/show_bug.cgi?id=270156

    Unreviewed non-unified build fixes.

    * Source/JavaScriptCore/assembler/PerfLog.cpp: Add missing inclusions of
    Options.h and wtf/StringPrintStream.h.
    * Source/WebCore/Modules/mediasource/MediaSourceInterfaceMainThread.cpp:
    Add missing inclusions of SourceBufferList.h and TimeRanges.h.
    * Source/WebCore/Modules/mediasource/MediaSourceInterfaceMainThread.h:
    Add missing forward declaration for the WebCore::MediaSource type.
    * Source/WebCore/Modules/mediasource/SourceBuffer.cpp: Remove unused
    ExponentialMovingAverageCoefficient constant.
    * Source/WebCore/Modules/mediasource/SourceBufferList.cpp: Add missing
    ContextDestructionObserverInlines.h header.
    * Source/WebCore/Modules/mediastream/MediaStreamTrackProcessor.cpp:
    Ditto, plus wtf/IsoMallocInlines.h.
    * Source/WebCore/Modules/mediastream/RTCDTMFSender.cpp: Add missing
    ContextDestructionObserverInlines.h.
    * Source/WebCore/Modules/mediastream/RTCRtpSFrameTransform.cpp: Ditto
    * Source/WebCore/Modules/mediastream/RTCRtpSender.cpp: Ditto.
    * Source/WebCore/Modules/speech/SpeechSynthesisUtterance.cpp: Ditto,
    plus move all inclusions into ENABLE(SPEECH_SYNTHESIS).
    * Source/WebCore/Modules/webcodecs/WebCodecsAudioDecoder.cpp: Add
    missing ContextDestructionObserverInlines.h inclusion.
    * Source/WebCore/Modules/webcodecs/WebCodecsAudioEncoder.cpp: Ditto.
    * Source/WebCore/Modules/webcodecs/WebCodecsVideoDecoder.cpp: Ditto.
    * Source/WebCore/Modules/webcodecs/WebCodecsVideoEncoder.cpp: Ditto.
    * Source/WebCore/animation/StyleOriginatedAnimationEvent.cpp: Add
    missing Node.h inclusion.
    * Source/WebCore/animation/WebAnimationUtilities.h: Add missing forward
    declarations for WebCore::Document and WebCore::Style::PseudoElementIdentifier.
    * Source/WebCore/bindings/js/GCController.h: Add missing forward
    declaration for the JSC::VM type.
    * Source/WebCore/css/parser/CSSSelectorParser.cpp: Add missing
    CSSTokenizer.h inclusion.
    * Source/WebCore/dom/FragmentDirectiveGenerator.cpp: Add missing
    Document.h inclusion.
    * Source/WebCore/dom/FragmentDirectiveGenerator.h: Add missing wtf/URL.h
    inclusion, add missing WebCore::SimpleRange forward declaration, and
    remove the unneeded WebCore::Range one.
    * Source/WebCore/editing/VisibleSelection.cpp: Replace Element.h
    inclusion with ElementInlines.h.
    * Source/WebCore/html/MediaElementSession.cpp: Add missing Navigator.h
    inclusion.
    * Source/WebCore/loader/cache/CachedResourceRequest.cpp: Add missing
    Quirks.h inclusion.
    * Source/WebCore/page/PointerLockController.cpp: Add missing
    DocumentInlines.h inclusion.
    * Source/WebCore/page/Quirks.h: Add missing WebCore::LocalFrame forward
    declaration.
    * Source/WebCore/platform/MediaDescription.h: Add missing
    wtf/text/WTFString.h inclusion, remove the unneeded wtf/Forward.h one.
    * Source/WebCore/rendering/RenderViewTransitionCapture.cpp: Add missing
    inclusions for ImageOverlayController.h, ImageQualityController.h,
    PaintInfo.h, and wtf/IsoMallocInlines.h.
    * Source/WebCore/rendering/svg/RenderSVGInlineText.cpp: Add missing
    inclusion of RenderObjectInlines.h.
    * Source/WebCore/style/Styleable.cpp: Add missing RenderView.h
    inclusion.
    * Source/WebKit/NetworkProcess/Cookies/WebCookieManager.cpp: Add missing
    Logging.h inclusion.
    * Source/WebKit/NetworkProcess/cache/NetworkCacheDataGLib.cpp: Add
    missing WebCore:: namespace prefixes to uses of the
    WebCore::SharedMemory type.
    (WebKit::NetworkCache::Data::tryCreateSharedMemory const):
    * Source/WebKit/Shared/WebCompiledContentRuleListData.cpp: Ditto.
    (WebKit::WebCompiledContentRuleListData::createDataHandle const):
    (WebKit::WebCompiledContentRuleListData::WebCompiledContentRuleListData):
    * Source/WebKit/Shared/gtk/WebEventFactory.cpp: Remove unused.
    gtkScrollDeltaMultiplier constant.
    * Source/WebKit/UIProcess/WebProcessProxy.cpp: Add missing inclusions
    for APIPageConfiguration.h and wtf/Scope.h.
    * Source/WebKit/UIProcess/gtk/ViewGestureControllerGtk.cpp: Remove
    unused swipeOverlayShadowOpacity constant.

    Canonical link: https://commits.webkit.org/275381@main