Source/WebKit/NetworkProcess/Cookies/WebCookieManager.cpp
@@ -26,6 +26,7 @@
 #include "config.h"
 #include "WebCookieManager.h"
 
+#include "Logging.h"
 #include "MessageSenderInlines.h"
 #include "NetworkProcess.h"
 #include "NetworkProcessProxyMessages.h"
